--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </head>
     <body>
         <div class="header text-center">
-            <img src="../static/icon.png" class="img-fluid" alt="Logo">
+            <img src="icon.png" class="img-fluid" alt="Logo">
         </div>
 
         <div class="Header text-center"> <h1>DotVIT Sequence Generator</h1></div>
